--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -47,6 +47,9 @@
     listen                443 ssl spdy default_server;  
     server_name           www.decalicious.com frank.decalicious.com;
 
+    # Local Root Location
+    root   /usr/share/nginx/sites/decalicious-down/;
+
     # SSL CERT & KEY
     ssl_certificate /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
     ssl_certificate_key /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
@@ -72,30 +75,28 @@
     }    
 
     #HTTP ERRORS LOCALLY 
-    #proxy_intercept_errors on; 
+    proxy_intercept_errors on; 
     error_page 404  404.html;
     error_page 500 502 503 504 =503 maintenance.html;
 
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
-      #internal;
-      root   /usr/share/nginx/sites/decalicious-down/;        
-      index  404.html;
       allow all;
+#      root   /usr/share/nginx/sites/decalicious-down/;        
+#      index  404.html;
+      rewrite ^(.*)$ /maintenance.html break;
+
     }
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-      #internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
-      index  maintenance.html;
       allow all;
+      rewrite ^(.*)$ /404.html break;
     }
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
-      #internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
    }
