--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -76,24 +76,26 @@
 
     #HTTP ERRORS LOCALLY 
     proxy_intercept_errors on; 
-    error_page 404  404.html;
-    error_page 500 502 503 504 =503 maintenance.html;
-
-
-    # EROR PAGE - LOCAL 404 PAGE
+    error_page 404  @localerror;
     location  ^~ /404.html {
       allow all;
 #      root   /usr/share/nginx/sites/decalicious-down/;        
 #      index  404.html;
       rewrite ^(.*)$ /maintenance.html break;
-
     }
 
-    # ERROR PAGE - DOWN FOR MAINTENANCE
-    location  ^~ /maintenance.html {
+
+    error_page 500 502 503 504 =503 @maintenance;
+    location  @maintenance {
       allow all;
       rewrite ^(.*)$ /404.html break;
     }
+
+    # EROR PAGE - LOCAL 404 PAGE
+
+
+    # ERROR PAGE - DOWN FOR MAINTENANCE
+
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
