--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -83,14 +83,16 @@
       allow all;
 #      root   /usr/share/nginx/sites/decalicious-down/;        
 #      index  404.html;
-      rewrite ^(.*)$ /maintenance.html break;
+      root   /usr/share/nginx/sites/decalicious-down/;
+      rewrite ^(.*)$ /404.html break;
     }
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     error_page 500 502 503 504 =503 @maintenance;
     location  @maintenance {
       allow all;
-      rewrite ^(.*)$ /404.html break;
+      root   /usr/share/nginx/sites/decalicious-down/;
+      rewrite ^(.*)$ /maintenance.html break;
     }
 
 
