--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -84,7 +84,8 @@
 #      root   /usr/share/nginx/sites/decalicious-down/;        
 #      index  404.html;
       root   /usr/share/nginx/sites/decalicious-down/;
-      rewrite ^(.*)$ /404.html break;
+      #rewrite ^(.*)$ /404.html break;
+      rewrite http://www.google.com;
     }
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
@@ -92,7 +93,8 @@
     location  @maintenance {
       allow all;
       root   /usr/share/nginx/sites/decalicious-down/;
-      rewrite ^(.*)$ /maintenance.html break;
+      #rewrite ^(.*)$ /maintenance.html break;
+      rewrite http://www.google.com;
     }
 
 
