--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -77,37 +77,29 @@
     #HTTP ERRORS LOCALLY 
     proxy_intercept_errors on; 
 
-    # EROR PAGE - LOCAL 404 PAGE
-    error_page 404  @localerror;
-    location  @localerror {
-      allow all;
-#      root   /usr/share/nginx/sites/decalicious-down/;        
-#      index  404.html;
-      root   /usr/share/nginx/sites/decalicious-down/;
-      #rewrite ^(.*)$ /404.html break;
-      rewrite http://www.google.com;
-    }
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
-    error_page 500 502 503 504 =503 @maintenance;
-    location  @maintenance {
-      allow all;
+    location  ^~ /maintenance.html {
       root   /usr/share/nginx/sites/decalicious-down/;
-      #rewrite ^(.*)$ /maintenance.html break;
-      rewrite http://www.google.com;
+      index  maintenance.html index.html index.htm;
+      allow all;
     }
 
-
-
-
-
-
+    # EROR PAGE - LOCAL 404 PAGE
+    location  ^~ /404.html {
+      root   /usr/share/nginx/sites/decalicious-down/;
+      index  404.html index.html index.htm;
+      allow all;
+    }
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
    }
+
+
+
 
 
 
