index page missing

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -49,6 +49,7 @@
 
     # Local Root Location
     root   /usr/share/nginx/sites/decalicious-down/;
+    index  index.html;
 
     # SSL CERT & KEY
     ssl_certificate /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
@@ -96,7 +97,7 @@
     location /xs {
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
-   }
+    }
 
 
 
