--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -134,15 +134,15 @@
           }
 
           # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-          if ($force_SSL = HTTP) {
-            rewrite ^ https://$server_name$request_uri? permanent; 
-            break;
+ #         if ($force_SSL = HTTP) {
+ #           rewrite ^ https://$server_name$request_uri? permanent; 
+ #           break;
           }
 
           # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-          if ($force_SSL = HTTPSXP) {
-            rewrite ^ http://$server_name$request_uri? redirect;
-            break;
+  #        if ($force_SSL = HTTPSXP) {
+  #          rewrite ^ http://$server_name$request_uri? redirect;
+  #          break;
           }
       # END REDIRECT TO HTTPS RULES
 
