--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -44,7 +44,8 @@
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
-    listen                443 ssl spdy default_server;  
+    #listen                443 ssl spdy default_server;
+    listen                443 ssl;  
     server_name           www.decalicious.com frank.decalicious.com;
 
     # Local Root Location
