--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -77,7 +77,7 @@
     }    
 
     #HTTP ERRORS LOCALLY 
-    proxy_intercept_errors on; 
+    proxy_intercept_errors off; 
 
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
