--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -78,7 +78,10 @@
 
     #HTTP ERRORS LOCALLY 
     proxy_intercept_errors off; 
-
+    
+    # PUSH TO LOCAL ERROR PAGES
+    error_page 500 502 503 504 =503 /maintenance.html;
+    error_page 404 =404 /404.html;    
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
