--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -77,7 +77,7 @@
     }    
 
     #HTTP ERRORS LOCALLY 
-    proxy_intercept_errors off; 
+    proxy_intercept_errors on; 
     
     # PUSH TO LOCAL ERROR PAGES
     error_page 500 502 503 504 =503 /maintenance.html;
