--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -44,8 +44,8 @@
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
-    #listen                443 ssl spdy default_server;
-    listen                443 ssl;  
+    listen                443 ssl spdy default_server;
+    #listen                443 ssl;  
     server_name           www.decalicious.com frank.decalicious.com;
 
     # Local Root Location
@@ -80,7 +80,7 @@
     proxy_intercept_errors off; 
     
     # PUSH TO LOCAL ERROR PAGES
-    error_page 500 502 503 504 =503 /maintenance.html;
+    error_page 400 500 502 503 504 =503 /maintenance.html;
     error_page 404 =404 /404.html;    
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
