--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -6,8 +6,9 @@ user                www-data;
 worker_processes    2;
 worker_priority    -5;
 timer_resolution   100ms;
-# error_log /var/log/nginx/error.log crit;
 
+ulimit -n 65535;
+worker_rlimit_nofile 20480;
 
 events {
    use                 epoll;
@@ -59,7 +60,9 @@ http {
     # Disable Logging Except Critical errors
     # access_log /dev/null;
     access_log off;
-    error_log /var/log/nginx/error.log crit;
+    #error_log /var/log/nginx/error.log crit;
+    error_log /var/log/nginx/error.log;
+
 
     # Include Sites Enabled / Conf.d Directories
     include /etc/nginx/conf.d/*.conf;
