--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -2,17 +2,21 @@
 # CUSTOMIZED WITH GZIP and PERFORMANCE SETTINGS
 
 
+# NANO /etc/security/limits.conf  
+# Add the two following lines.
+# * soft nofile 16384
+# * hard nofile 16384
+
 user                www-data;
 worker_processes    2;
 worker_priority    -5;
 timer_resolution   100ms;
 
-ulimit -n 65535;
-worker_rlimit_nofile 20480;
+
 
 events {
    use                 epoll;
-   worker_connections  1024;
+   worker_connections  4096;
    multi_accept        on;
 }
 
