favicon to nginx

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -103,7 +103,11 @@
       allow  all;     
     }
 
-
+    # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
+    location /favicon.ico {
+      root   /usr/share/nginx/sites/decalicious-down/;
+      allow  all;     
+    }
 
 
 
