--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -46,7 +46,7 @@
     listen                80;
     listen                443 ssl spdy default_server;
     #listen                443 ssl;  
-    server_name           www.decalicious.com frank.decalicious.com;
+    server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
 
     # Local Root Location
     root   /usr/share/nginx/sites/decalicious-down/;
@@ -103,7 +103,7 @@
       allow  all;     
     }
 
-    # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
+    # Dont Proxy Pass Favicon
     location /favicon.ico {
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
@@ -142,16 +142,16 @@
           }
 
           # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
- #         if ($force_SSL = HTTP) {
- #           rewrite ^ https://$server_name$request_uri? permanent; 
- #           break;
-#          }
+          if ($force_SSL = HTTP) {
+            rewrite ^ https://$server_name$request_uri? permanent; 
+            break;
+          }
 
           # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-  #        if ($force_SSL = HTTPSXP) {
-  #          rewrite ^ http://$server_name$request_uri? redirect;
-  #          break;
- #         }
+          if ($force_SSL = HTTPSXP) {
+            rewrite ^ http://$server_name$request_uri? redirect;
+            break;
+          }
       # END REDIRECT TO HTTPS RULES
 
       # ADDITIONAL HEADERS
@@ -352,7 +352,7 @@
 
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
-      add_header                Cache-Control "no-transform,public,max-age=36720000";
+      add_header                Cache-Control "no-transform,public,max-age=36720000, s-maxage=262800";
       etag                      on;
       expires                   425d;
       
@@ -399,6 +399,10 @@
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
 
+      #HTTP ERRORS LOCALLY 
+      proxy_intercept_errors on; 
+      error_page 500 502 503 504 =503 /maintenance.html;
+      error_page 404 =404 /404.html; 
     
       break;
     }
