--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -143,15 +143,15 @@
 
           # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
           if ($force_SSL = HTTP) {
-            rewrite ^ https://$server_name$request_uri? permanent; 
+            rewrite ^ https://www.decalicious.com$request_uri? permanent; 
             break;
           }
 
           # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-          if ($force_SSL = HTTPSXP) {
-            rewrite ^ http://$server_name$request_uri? redirect;
-            break;
-          }
+ #         if ($force_SSL = HTTPSXP) {
+  #          rewrite ^ http://$server_name$request_uri? redirect;
+  #          break;
+   #       }
       # END REDIRECT TO HTTPS RULES
 
       # ADDITIONAL HEADERS
