--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -38,12 +38,13 @@
 
 
    # ----------------------------------------------------------
-   #       WWW.DECALICIOUS.COM (Or Other Subdomains?)
+   #       WWW.DECALICIOUS.COM SSL
    # ----------------------------------------------------------
    server {
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
+    listen                [::]:80;
     listen                443 ssl spdy default_server;
     #listen                443 ssl;  
     server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
@@ -147,12 +148,7 @@
             break;
           }
 
-          # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
- #         if ($force_SSL = HTTPSXP) {
-  #          rewrite ^ http://$server_name$request_uri? redirect;
-  #          break;
-   #       }
-      # END REDIRECT TO HTTPS RULES
+
 
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS";
