--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -142,11 +142,18 @@
             more_set_headers   "X-Warning: SSL Off";
           }
 
-          # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-          if ($force_SSL = HTTP) {
-            rewrite ^ https://www.decalicious.com$request_uri? permanent; 
-            break;
-          }
+      #    # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+      #    if ($force_SSL = HTTP) {
+      #      rewrite ^ https://www.decalicious.com$request_uri? permanent; 
+      #      break;
+      #    }
+
+      # Turn on SSL 
+      if ($ssl_protocol = "") {
+       rewrite ^   http://$server_name$request_uri? permanent;
+       break;
+      }
+
 
 
 
