--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -150,7 +150,7 @@
 
       # Turn on SSL 
       if ($ssl_protocol = "") {
-       rewrite ^   http://$server_name$request_uri? permanent;
+       rewrite ^   https://$server_name$request_uri? permanent;
        break;
       }
 
