--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -38,13 +38,12 @@
 
 
    # ----------------------------------------------------------
-   #       WWW.DECALICIOUS.COM SSL
+   #       WWW.DECALICIOUS.COM (Or Other Subdomains?)
    # ----------------------------------------------------------
    server {
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
-    listen                [::]:80;
     listen                443 ssl spdy default_server;
     #listen                443 ssl;  
     server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
@@ -142,20 +141,18 @@
             more_set_headers   "X-Warning: SSL Off";
           }
 
-      #    # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-      #    if ($force_SSL = HTTP) {
-      #      rewrite ^ https://www.decalicious.com$request_uri? permanent; 
-      #      break;
-      #    }
+          # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+   #       if ($force_SSL = HTTP) {
+   #         rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
+   #         break;
+   #       }
 
-      # Turn on SSL 
-      if ($ssl_protocol = "") {
-       rewrite ^   https://$server_name$request_uri? permanent;
-       break;
-      }
-
-
-
+          # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+   #       if ($force_SSL = HTTPSXP) {
+   #         rewrite ^ http://$server_name$request_uri? redirect;
+   #         break;
+   #       }
+      # END REDIRECT TO HTTPS RULES
 
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS";
