only listen ssl

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -43,7 +43,7 @@
    server {
 
     # SERVER SPECIFIC SETTINGS
-    listen                80;
+    #listen                80;
     listen                443 ssl spdy default_server;
     #listen                443 ssl;  
     server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
