--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -46,7 +46,9 @@
     #listen                80;
     listen                443 ssl spdy default_server;
     #listen                443 ssl;  
-    server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
+#    server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
+    server_name           www.decalicious.com;
+
 
     # Local Root Location
     root   /usr/share/nginx/sites/decalicious-down/;
