--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -23,6 +23,7 @@ events {
 
 http {
 
+
     client_max_body_size      25m;
     client_body_buffer_size   128k;
     client_body_temp_path     /tmp/client_body_temp;
@@ -41,6 +42,10 @@ http {
     reset_timedout_connection on;
     client_body_timeout       15;
     send_timeout              5;
+
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     # END EXPIRIMENTS
 
     #GZIP 1.0 to support cloudfront
