--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -44,10 +44,15 @@
 
     # SERVER SPECIFIC SETTINGS
     #listen                80;
-    listen                443 ssl spdy default_server;
+#    listen                443 ssl spdy default_server;
     #listen                443 ssl;  
 #    server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
-    server_name           www.decalicious.com;
+#    server_name           www.decalicious.com;
+
+
+    listen 443 ssl spdy;
+    server_name www.decalicious.com;
+
 
 
     # Local Root Location
@@ -65,8 +70,12 @@
     ssl_session_timeout 10m;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     # SITE LOCATION
-    keepalive_timeout     5s;
+    #keepalive_timeout     5s;
+    keepalive_timeout   30;
     allow                 all;
     server_tokens         off; 
     
