--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -50,7 +50,7 @@
 #    server_name           www.decalicious.com;
 
 
-    listen 443 ssl spdy;
+    listen 443 ssl spdy default_server;
     server_name www.decalicious.com;
 
 
