bash script to reload nginx config and restart server after git pull

--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -43,8 +43,8 @@ http {
     client_body_timeout       15;
     send_timeout              5;
 
-    ssl_session_cache   shared:SSL:10m;
-    ssl_session_timeout 10m;
+    #ssl_session_cache   shared:SSL:10m;
+    #ssl_session_timeout 10m;
 
     # END EXPIRIMENTS
 
