--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,6 +1,6 @@
 # CUSTOM NGINX CONFIGURATION - MATADOR
 # CUSTOMIZED WITH GZIP and PERFORMANCE SETTINGS
-
+# LAST UPDATED BY FRANK
 
 # NANO /etc/security/limits.conf  
 # Add the two following lines.
