--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -1,215 +1,212 @@
-    # -------------------------------------
-    #     TYPO DOMAIN NAMES - REDIRECT    -
-    #--------------------------------------
-    server {
-      listen      80;
-      server_name dec.al decalciious.net decalishus.com;
-      rewrite ^ https://www.decalicious.com$request_uri? permanent;
-      access_log          /dev/null;
-      error_log           /dev/null;
-    }
-
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-
-    # -------------------------------------------
-    #          BACKEND IIS SERVER FARM          -
-    # -------------------------------------------
-    upstream iis-servers-decalicious {
-
-     # STICKY IP (SAME SERVER BASED ON IP)
-     ip_hash;
-
-     # UPSTREAM IIS SERVERS (Add More As Needed)
-     server ww1.decalicious.com;
-     #server ww2.decalicious.com;
-     #server ww3.decalicious.com;
-     #server ww4.decalicious.com;
-     #server ww5.decalicious.com;
-
-     # HEALTH CHECK SETTINGS (Milisecond Intervals) > https://github.com/yaoweibin/nginx_upstream_check_module
-     check interval=50000 rise=1 fall=2 timeout=2500 type=http;
-     check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: decalicious.com\r\n\r\n";
-     check_http_expect_alive http_2xx http_3xx;
-   }
 
 
 
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-
-
-   # ----------------------------------------------------------
-   #       WWW.DECALICIOUS.COM (Or Other Subdomains?)
-   # ----------------------------------------------------------
-   server {
-
-    # SERVER SPECIFIC SETTINGS
-    #listen                80;
-#    listen                443 ssl spdy default_server;
-    #listen                443 ssl;  
-#    server_name           www.decalicious.com x.decalicious.com dev.decalicious.com frank.decaliciouis.com;
-#    server_name           www.decalicious.com;
-
-
-    listen 443 ssl spdy default_server;
-    server_name www.decalicious.com;
+# -------------------------------------
+#     TYPO DOMAIN NAMES - REDIRECT    -
+#--------------------------------------
+server {
+  listen      80;
+  server_name dec.al decalciious.net decalishus.com;
+  rewrite ^ https://www.decalicious.com$request_uri? permanent;
+  access_log          /dev/null;
+  error_log           /dev/null;
+}
 
 
 
-    # Local Root Location
-    root   /usr/share/nginx/sites/decalicious-down/;
-    index  index.html;
 
-    # SSL CERT & KEY
-    ssl_certificate /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
-    ssl_certificate_key /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
+# -------------------------------------------
+#          BACKEND IIS SERVER FARM          -
+# -------------------------------------------
+upstream iisfarm {
 
-    # SSL SETTINGS
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+ # STICKY IP (SAME SERVER BASED ON IP)
+ ip_hash;
+
+ # UPSTREAM IIS SERVERS
+ server ww1.nutraxen.com;
+ #server ww2.nutraxen.com;
+ #server ww3.nutraxen.com;
+ #server ww4.nutraxen.com;
+ #server ww5.nutraxen.com;
 
 
 
-    # SITE LOCATION
-    #keepalive_timeout     5s;
-    keepalive_timeout   30;
-    allow                 all;
-    server_tokens         off; 
-    
-    # CLEAR CACHE CONTROL FROM IIS BACKEND
-    more_clear_headers    'Cache-Control';
+ # HEALTH CHECK SETTINGS
+ # https://github.com/yaoweibin/nginx_upstream_check_module
+ check interval=10000 rise=1 fall=2 timeout=1000 type=http;
+ #check_http_send "GET / HTTP/1.0\r\n\r\n";
+ #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
+ #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+ check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+ check_http_expect_alive http_2xx http_3xx;
+}
 
-    # BLOCK BAD AGENTS
-    if ($http_user_agent ~* LWP::Simple|BBBike|wget) {
-      return 403;
-    }    
 
-    #HTTP ERRORS LOCALLY 
-    proxy_intercept_errors on; 
-    
-    # PUSH TO LOCAL ERROR PAGES
-    error_page 400 500 502 503 504 =503 /maintenance.html;
-    error_page 404 =404 /404.html;    
 
-    # ERROR PAGE - DOWN FOR MAINTENANCE
-    location  ^~ /maintenance.html {
-      root   /usr/share/nginx/sites/decalicious-down/;
-      index  maintenance.html index.html index.htm;
-      allow all;
-    }
 
-    # EROR PAGE - LOCAL 404 PAGE
-    location  ^~ /404.html {
-      root   /usr/share/nginx/sites/decalicious-down/;
-      index  404.html index.html index.htm;
-      allow all;
-    }
+# -------------------------------------
+#      SSL REDIRECT MISSING WWW       -
+#--------------------------------------
+server {
 
-    # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
-    location /xs {
-      root   /usr/share/nginx/sites/decalicious-down/;
-      allow  all;     
-    }
+  ssl on;
+  listen      443 ssl;
+  server_name decalicious.com;
 
-    # Dont Proxy Pass Favicon
-    location /favicon.ico {
-      root   /usr/share/nginx/sites/decalicious-down/;
-      allow  all;     
-    }
+  #REDIRECT TO SSL https://www.nutraxen.com
+  rewrite ^ https://www.decalicious.com$request_uri? permanent;
+
+  # SSL CERT & KEY
+  ssl_certificate /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
+  ssl_certificate_key /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
+
+  # NO LOGGING
+  access_log          /dev/null;
+  error_log           /dev/null;
+}
 
 
 
 
 
 
-    
-    # IIS FARM DASHBOARD  //www.decalicious.com/iis-servers-decalicoius
-    location /dashboard/nginx {
-      check_status;
-      access_log   off;
-      allow all;
-    }
 
-    # MAIN SITE LOCATION (NO CACHING)
-    location / {
 
-      # START REDIRECT TO HTTPS RULES
-          # DEFAULT HTTPS (EVERYTHING OK - REQUEST CAME IN ON HTTPS)
-          set $force_SSL HTTPS;
 
-          # IF REQUEST NOT SECURE | VAR = T (TRUE) | MAY NEED REDIRECT
-          if ($ssl_protocol = "") {
-            set $force_SSL     HTTP; 
-            #more_set_headers   "X-Error-1: Not Using SSL";
-          }
+# -------------------------------------------
+#       ACTUAL SITE WITH - SSL CERTIFICATE
+# -------------------------------------------
+server {
 
-          # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
-          if ($http_user_agent ~* "NT 5.1") {
-            set $force_SSL     "${force_SSL}XP"; 
-            more_set_headers   "X-Warning: SSL Off";
-          }
+  # SSL SETTINGS(with SPDY 2)
+  #ssl on;
+  listen 443 ssl spdy default_server;
+  ssl_session_timeout        15m;
+  ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
+  ssl_prefer_server_ciphers  on;
+  ssl_session_cache          shared:SSL:10m;
 
-          # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-   #       if ($force_SSL = HTTP) {
-   #         rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
-   #         break;
-   #       }
+  # SSL CERTIFICATE
+  ssl_certificate       /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
+  ssl_certificate_key   /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
 
-          # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-   #       if ($force_SSL = HTTPSXP) {
-   #         rewrite ^ http://$server_name$request_uri? redirect;
-   #         break;
-   #       }
-      # END REDIRECT TO HTTPS RULES
+  # HEADERS FOR STRICT SSL
+  add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
+  add_header                X-Frame-Options SAMEORIGIN;
+  add_header                Cache-Control public;
+  more_set_headers          "Server: BATMAN";
 
-      # ADDITIONAL HEADERS
-      more_set_headers          "Server: DECALS";
-      add_header                Cache-Control "public, max-age=60";
-      etag                      on;
-      expires                   60s;
+  # SERVER SPECIFIC SETTINGS
+  server_name         www.decalicious.com;
+  root               /usr/share/nginx/sites/decalicious-down/;
+  keepalive_timeout  30s;
+  allow              all;
+  server_tokens      off;
 
-      # Gzip
-      gzip                      on;
-      gzip_vary                 on;
-      gzip_http_version         1.0;
-      gzip_disable              "MSIE [1-6].(?!.*SV1)";
-      gzip_min_length           750;
-      gzip_buffers              64 8k;
-      gzip_comp_level           3;
-      gzip_proxied              any;
-      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-      
-      # Cache File Information
-      open_file_cache           max=1000 inactive=500s;
-      open_file_cache_valid     600s;
-      open_file_cache_errors    on;
 
-      # PROXY SETTINGS
-      proxy_redirect            off;
-      proxy_set_header          Host              "www.decalicious.com";
-      proxy_set_header          X-Real-IP         $remote_addr;
-      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header          X-Forwarded-Proto $scheme;
-      proxy_pass                http://iis-servers-decalicious;
-      proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+  #  gzip               on;
+  #  gzip_vary          on;
 
-      # PROXY CACHING
-      #proxy_cache               off;
-      proxy_cache               STATIC;
-      proxy_cache_valid         200 302 1d;
-      proxy_cache_valid         404     1m;
-      proxy_cache_use_stale     error timeout invalid_header updating
-      http_500 http_502 http_503 http_504;
-      break;
 
+  # PREVENT SCRAPING
+  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+  # BLOCK BAD REFERRER
+  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;}
+
+
+  # IIS FARM DASHBOARD  https://www.decalicious.com/dashboard/nginx
+  location /dashboard/nginx {
+    check_status;
+    access_log   off;
+    # allow SOME.IP.ADD.RESS;
+    # deny all;
+    allow all;
   }
 
- 
-    # MAIN SITE LOCATION (NO CACHING)
+
+
+  # MAIN SITE LOCATION
+  location / {
+
+    # START REDIRECT TO HTTPS RULES
+    # DEFAULT HTTPS (EVERYTHING OK - REQUEST CAME IN ON HTTPS)
+    set $force_SSL HTTPS;
+
+    # IF REQUEST NOT SECURE | VAR = T (TRUE) | MAY NEED REDIRECT
+    if ($ssl_protocol = "") {
+      set $force_SSL     HTTP; 
+      #more_set_headers   "X-Error-1: Not Using SSL";
+    }
+
+    # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
+    if ($http_user_agent ~* "NT 5.1") {
+      set $force_SSL     "${force_SSL}XP"; 
+      more_set_headers   "X-Warning: SSL Off";
+    }
+
+    # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+    #       if ($force_SSL = HTTP) {
+     #         rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
+     #         break;
+     #       }
+
+     # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+     #       if ($force_SSL = HTTPSXP) {
+       #         rewrite ^ http://$server_name$request_uri? redirect;
+       #         break;
+       #       }
+       # END REDIRECT TO HTTPS RULES
+
+       # ADDITIONAL HEADERS
+       more_set_headers          "Server: DECALS";
+       add_header                Cache-Control "public, max-age=60";
+       etag                      on;
+       expires                   60s;
+
+       # Gzip
+       gzip                      on;
+       gzip_vary                 on;
+       gzip_http_version         1.0;
+       gzip_disable              "MSIE [1-6].(?!.*SV1)";
+       gzip_min_length           750;
+       gzip_buffers              64 8k;
+       gzip_comp_level           3;
+       gzip_proxied              any;
+       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+       # Cache File Information
+       open_file_cache           max=1000 inactive=500s;
+       open_file_cache_valid     600s;
+       open_file_cache_errors    on;
+
+       # PROXY SETTINGS
+       proxy_redirect            off;
+       proxy_set_header          Host              "www.decalicious.com";
+       proxy_set_header          X-Real-IP         $remote_addr;
+       proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+       proxy_set_header          X-Forwarded-Proto $scheme;
+       proxy_pass                http://iis-servers-decalicious;
+       proxy_temp_path           /usr/share/nginx/temp;
+       #proxy_connect_timeout    5;
+       #proxy_read_timeout       240;
+
+       # PROXY CACHING
+       #proxy_cache               off;
+       proxy_cache               STATIC;
+       proxy_cache_valid         200 302 1d;
+       proxy_cache_valid         404     1m;
+       proxy_cache_use_stale     error timeout invalid_header updating
+       http_500 http_502 http_503 http_504;
+
+       #HTTP ERRORS LOCALLY
+       proxy_intercept_errors on;
+       error_page 500 502 503 504 =503 /maintenance.html;
+
+     }
+
+    # API (NO CACHING)
     location /api {
 
       # ADDITIONAL HEADERS
@@ -262,18 +259,17 @@
           return 204; 
       } 
 
+      #HTTP ERRORS LOCALLY
+      proxy_intercept_errors on;
+      error_page 500 502 503 504 =503 /maintenance.html;
+
       break;
     }
 
 
 
-
-
-   # ----------------------------------------------------------
-   #       www.Decalicious.com/Blog (Reverse Proxy Blogger)
-   # ----------------------------------------------------------
+    # BLOG NEEDS TO BE HTTP ONLy
     location = /blog {
-      #Remove Trailing Slashes
       rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
       break;
     }
@@ -295,60 +291,8 @@
       location ~* ^/blog/robots.txt {
         deny all;
       }
-
-      # Rewrite outbound text to new url | rewrite https for image sources
-      subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
-
-      # Variables so we can redirect later
-      set $blog_url            'blog.decalicious.com';
-      set $url_full            '$1';
-
-      # HEADERS
-      more_set_headers          "Server: DECALS-BL";
-      add_header                Cache-Control "public, max-age=3600";
-      etag                      on;
-      expires                   1h;
-      
-      # Cache File Information
-      open_file_cache           max=1000 inactive=500s;
-      open_file_cache_valid     600s;
-      open_file_cache_errors    on;
-
-      # Gzip
-      gzip                      on;
-      gzip_vary                 on;
-      gzip_http_version         1.0;
-      gzip_disable              "MSIE [1-6].(?!.*SV1)";
-      gzip_min_length           200;
-      gzip_buffers              64 8k;
-      gzip_comp_level           3;
-      gzip_proxied              any;
-      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
- 
-      # PROXY SETTINGS
-      proxy_set_header          Accept-Encoding "";
-      proxy_http_version        1.1;
-      proxy_redirect            off;
-      proxy_set_header          Host $blog_url;
-      proxy_set_header          Authorization '';
-      proxy_hide_header         Set-Cookie;
-      proxy_ignore_headers      "Set-Cookie";
-      proxy_buffering           off;
-      resolver                  8.8.4.4 8.8.8.8 valid=300s;
-      resolver_timeout          10s;
-      proxy_pass                http://$blog_url/$url_full;
-      proxy_temp_path           /usr/share/nginx/temp;
-
-      # PROXY CACHING
-      proxy_cache               STATIC;
-      proxy_cache_valid         200 302 1d;
-      proxy_cache_valid         404     1m;
-      proxy_cache_use_stale     error timeout invalid_header updating
-      http_500 http_502 http_503 http_504;
-
-
-      break;
     }
+
 
 
    # ----------------------------------------------------------
@@ -472,11 +416,46 @@
 
 
 
+     # DOWN FOR MAINTENANCE
+     location  ^~ /maintenance.html {
+       root   /usr/share/nginx/sites/decalicious-down/;
+       index  maintenance.html index.html index.htm;
+       allow all;
+     }
 
-   # NO LOGGING
-   #access_log          /dev/null;
-   #error_log           /dev/null;
-   # DEBUG LOGGING
-   error_log           /var/log/nginx/decalicious.com.error.log ;
-   access_log          /var/log/nginx/decalicious.com.log ;
- }
+     # LOCAL 404 PAGE
+     location  ^~ /404.html {
+       root   /usr/share/nginx/sites/decalicious-down/;
+       index  404.html index.html index.htm;
+       allow all;
+     }
+
+     # LOCAL 404 PAGE IMAGES
+     location /xs {
+       root   /usr/share/nginx/sites/decalicious-down/;
+       allow  all;
+     }
+
+     # ERROR PAGES (LOCAL)
+     error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
+     error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
+
+
+     # NO LOGGING
+     access_log          /dev/null;
+     #error_log           /dev/null;
+     # DEBUG LOGGING
+     error_log           /var/log/nginx/decalicious.com.error.log debug;
+     #access_log          /var/log/nginx/decalicious.com.log ;
+   }
+
+
+
+
+
+
+
+
+
+
+
