--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -18,27 +18,21 @@ server {
 # -------------------------------------------
 #          BACKEND IIS SERVER FARM          -
 # -------------------------------------------
-upstream iisfarm {
+upstream iis-servers-decalicious {
 
  # STICKY IP (SAME SERVER BASED ON IP)
  ip_hash;
 
- # UPSTREAM IIS SERVERS
- server ww1.nutraxen.com;
- #server ww2.nutraxen.com;
- #server ww3.nutraxen.com;
- #server ww4.nutraxen.com;
- #server ww5.nutraxen.com;
+ # UPSTREAM IIS SERVERS (Add More As Needed)
+ server ww1.decalicious.com;
+ #server ww2.decalicious.com;
+ #server ww3.decalicious.com;
+ #server ww4.decalicious.com;
+ #server ww5.decalicious.com;
 
-
-
- # HEALTH CHECK SETTINGS
- # https://github.com/yaoweibin/nginx_upstream_check_module
- check interval=10000 rise=1 fall=2 timeout=1000 type=http;
- #check_http_send "GET / HTTP/1.0\r\n\r\n";
- #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
- #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
- check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+ # HEALTH CHECK SETTINGS (Milisecond Intervals) > https://github.com/yaoweibin/nginx_upstream_check_module
+ check interval=50000 rise=1 fall=2 timeout=2500 type=http;
+ check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: decalicious.com\r\n\r\n";
  check_http_expect_alive http_2xx http_3xx;
 }
 
@@ -81,7 +75,7 @@ server {
 
   # SSL SETTINGS(with SPDY 2)
   #ssl on;
-  listen 443 ssl spdy default_server;
+  listen                     443 ssl spdy default_server;
   ssl_session_timeout        15m;
   ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
@@ -105,11 +99,6 @@ server {
   allow              all;
   server_tokens      off;
 
-
-  #  gzip               on;
-  #  gzip_vary          on;
-
-
   # PREVENT SCRAPING
   if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
   # BLOCK BAD REFERRER
@@ -125,39 +114,8 @@ server {
     allow all;
   }
 
-
-
   # MAIN SITE LOCATION
   location / {
-
-    # START REDIRECT TO HTTPS RULES
-    # DEFAULT HTTPS (EVERYTHING OK - REQUEST CAME IN ON HTTPS)
-    set $force_SSL HTTPS;
-
-    # IF REQUEST NOT SECURE | VAR = T (TRUE) | MAY NEED REDIRECT
-    if ($ssl_protocol = "") {
-      set $force_SSL     HTTP; 
-      #more_set_headers   "X-Error-1: Not Using SSL";
-    }
-
-    # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
-    if ($http_user_agent ~* "NT 5.1") {
-      set $force_SSL     "${force_SSL}XP"; 
-      more_set_headers   "X-Warning: SSL Off";
-    }
-
-    # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-    #       if ($force_SSL = HTTP) {
-     #         rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
-     #         break;
-     #       }
-
-     # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
-     #       if ($force_SSL = HTTPSXP) {
-       #         rewrite ^ http://$server_name$request_uri? redirect;
-       #         break;
-       #       }
-       # END REDIRECT TO HTTPS RULES
 
        # ADDITIONAL HEADERS
        more_set_headers          "Server: DECALS";
@@ -262,7 +220,6 @@ server {
       #HTTP ERRORS LOCALLY
       proxy_intercept_errors on;
       error_page 500 502 503 504 =503 /maintenance.html;
-
       break;
     }
 
@@ -291,6 +248,11 @@ server {
       location ~* ^/blog/robots.txt {
         deny all;
       }
+      #HTTP ERRORS LOCALLY
+      proxy_intercept_errors on;
+      error_page 500 502 503 504 =503 /maintenance.html;
+      break;
+
     }
 
 
