Very Clean SSL Only

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -105,7 +105,7 @@ server {
   if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;}
 
 
-  # IIS FARM DASHBOARD  https://www.decalicious.com/dashboard/nginx
+  #  **** IIS FARM DASHBOARD  (https://www.decalicious.com/dashboard/nginx)  ****
   location /dashboard/nginx {
     check_status;
     access_log   off;
@@ -114,7 +114,7 @@ server {
     allow all;
   }
 
-  # MAIN SITE LOCATION
+  #  **** MAIN SITE LOCATION  ****
   location / {
 
        # ADDITIONAL HEADERS
@@ -164,7 +164,7 @@ server {
 
      }
 
-    # API (NO CACHING)
+    # **** API (NO CACHING + CORS HEADERS) **** 
     location /api {
 
       # ADDITIONAL HEADERS
@@ -225,7 +225,7 @@ server {
 
 
 
-    # BLOG NEEDS TO BE HTTP ONLy
+    # **** BLOGGER (SSL NOT SUPPORTED ) **** 
     location = /blog {
       rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
       break;
@@ -257,9 +257,7 @@ server {
 
 
 
-   # ----------------------------------------------------------
-   #       www.Decalicious.com/s3 (Static Content Amazon S3)
-   # ----------------------------------------------------------
+     # **** AMAZON S3 BUCKET  **** 
     location ~* ^/x/s3/(.*) {
 
 
@@ -323,10 +321,7 @@ server {
       break;
     }
 
-   # -------------------------------------------------------------------------------------------
-   #       www.Decalicious.com/x (IN CASE WE ARE NOT USING A CDN | RELATIVE PATHS)
-   # -------------------------------------------------------------------------------------------
-    #location /x/ {
+     # **** X FOLDER (EXTRA CACHING BECAUSE OF CLOUDFRONT) **** 
     location ~* /(x/|app/|favicon.ico) {
 
       # HEADERS
@@ -378,37 +373,37 @@ server {
 
 
 
-     # DOWN FOR MAINTENANCE
+     # **** DOWN FOR MAINTENANCE **** 
      location  ^~ /maintenance.html {
        root   /usr/share/nginx/sites/decalicious-down/;
        index  maintenance.html index.html index.htm;
        allow all;
      }
 
-     # LOCAL 404 PAGE
+     # **** LOCAL 404 PAGE **** 
      location  ^~ /404.html {
        root   /usr/share/nginx/sites/decalicious-down/;
        index  404.html index.html index.htm;
        allow all;
      }
 
-     # LOCAL 404 PAGE IMAGES
+     # **** LOCAL 404 PAGE IMAGES / SCRIPTS  **** 
      location /xs {
        root   /usr/share/nginx/sites/decalicious-down/;
        allow  all;
      }
 
-     # ERROR PAGES (LOCAL)
+     #  ****  ERROR PAGES (LOCAL) **** 
      error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
      error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
 
 
      # NO LOGGING
-     access_log          /dev/null;
+     #access_log          /dev/null;
      #error_log           /dev/null;
      # DEBUG LOGGING
      error_log           /var/log/nginx/decalicious.com.error.log debug;
-     #access_log          /var/log/nginx/decalicious.com.log ;
+     access_log          /var/log/nginx/decalicious.com.log ;
    }
 
 
