--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -7,7 +7,7 @@
 # * soft nofile 16384
 # * hard nofile 16384
 
-user                www-data;
+#user                www-data;
 worker_processes    2;
 worker_priority    -5;
 timer_resolution   100ms;
