--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -74,7 +74,7 @@ server {
 server {
 
   # SSL SETTINGS(with SPDY 2)
-  #ssl on;
+  ssl on;
   listen                     443 ssl spdy default_server;
   ssl_session_timeout        15m;
   ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
@@ -101,8 +101,6 @@ server {
 
   # PREVENT SCRAPING
   if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
-  # BLOCK BAD REFERRER
-  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;}
 
 
   #  **** IIS FARM DASHBOARD  (https://www.decalicious.com/dashboard/nginx)  ****
