--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -145,16 +145,17 @@ server {
        proxy_set_header          X-Forwarded-Proto $scheme;
        proxy_pass                http://iis-servers-decalicious;
        proxy_temp_path           /usr/share/nginx/temp;
-       #proxy_connect_timeout    5;
-       #proxy_read_timeout       240;
+       
+       proxy_connect_timeout    5;
+       proxy_read_timeout       240;
 
        # PROXY CACHING
-       #proxy_cache               off;
-       proxy_cache               STATIC;
-       proxy_cache_valid         200 302 1d;
-       proxy_cache_valid         404     1m;
-       proxy_cache_use_stale     error timeout invalid_header updating
-       http_500 http_502 http_503 http_504;
+       proxy_cache               off;
+       #proxy_cache               STATIC;
+       #proxy_cache_valid         200 302 1d;
+       #proxy_cache_valid         404     1m;
+       #proxy_cache_use_stale     error timeout invalid_header updating
+       #http_500 http_502 http_503 http_504;
 
        #HTTP ERRORS LOCALLY
        proxy_intercept_errors on;
@@ -195,8 +196,8 @@ server {
       proxy_set_header          X-Forwarded-Proto $scheme;
       proxy_pass                http://iis-servers-decalicious;
       proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+      proxy_connect_timeout    5;
+      proxy_read_timeout       240;
 
       # PROXY CACHING
       proxy_cache               off;
@@ -355,8 +356,8 @@ server {
       proxy_set_header          X-Forwarded-Proto $scheme;
       proxy_pass                http://iis-servers-decalicious;
       proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+      proxy_connect_timeout    5;
+      proxy_read_timeout       240;
 
       # PROXY CACHING
       proxy_cache               STATIC;
