--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -14,7 +14,7 @@ upstream phpBackend {
 #-----------------------------------------------------
 server {
   listen      80 default_server;
-  #server_name *.cloudapp.net;
+  server_name *.cloudapp.net;
   root   /usr/share/nginx/sites/wwwroot/;
   index  index.php index.html index.htm;
   keepalive_timeout     5s;
