--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -398,8 +398,8 @@ server {
         #access_log          /dev/null;
         #error_log           /dev/null;
     # LOGGING - CRITICAL
-        error_log           /var/log/nginx/decalicious-error.log crit;
-        access_log          /var/log/nginx/decalicious.log ;
+        #error_log           /var/log/nginx/decalicious-error.log crit;
+        #access_log          /var/log/nginx/decalicious.log ;
     # LOGGING - DEBUG
         error_log           /var/log/nginx/decalicious-error.log debug;
         access_log          /var/log/nginx/decalicious.log ;
